# Task38_2_HTML_Editor

./: CMakeLists.txt  main.cpp
